--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.23.0",
     "gh-pages": "^3.2.3",
+    "json-server": "^0.17.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
@@ -27,6 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
+    "api-server": "json-server --port 4040 --delay 300 --watch db.json",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
